fix docker config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,9 @@ services:
         - app
 
   ccss_resources:
-    build: .
+    build:
+      context: .
+      dockerfile: ./docker/Dockerfile
     command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000 && celery -A core worker -l info"
     volumes:
       - .:/code
@@ -34,7 +36,9 @@ services:
       - app
 
   ccss_resources_jobs:
-    build: .
+    build:
+      context: .
+      dockerfile: ./docker/Dockerfile
     command: bash -c "celery -A core worker --beat --scheduler django --loglevel=info"
     volumes:
       - .:/code
