--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -5,4 +5,4 @@ COPY requirements.txt /code/
 RUN pip install -r requirements.txt
 COPY . /code/
 
-ENTRYPOINT [ "/code/start.sh" ]
+ENTRYPOINT [ "/code/docker/start-dev.sh" ]
