--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -5,5 +5,4 @@ COPY requirements.txt /code/
 RUN pip install -r requirements.txt
 COPY . /code/
 
-RUN chmod +x docker/start-celery.sh
-ENTRYPOINT [ "/code/docker/start-celery.sh" ]
+ENTRYPOINT [ "/code/start-prod.sh" ]
