--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 amqp==5.0.5
+appdirs==1.4.4
 asgiref==3.3.1
 billiard==3.6.3.0
+black==21.4b2
 celery==5.0.5
 click==7.1.2
 click-didyoumean==0.0.3
@@ -11,12 +13,16 @@ django-celery-beat==2.2.0
 django-timezone-field==4.1.1
 djangorestframework==3.12.2
 kombu==5.0.2
+mypy-extensions==0.4.3
+pathspec==0.8.1
 prompt-toolkit==3.0.14
 psycopg2-binary==2.8.6
 python-crontab==2.5.1
 python-dateutil==2.8.1
 pytz==2020.4
+regex==2021.4.4
 six==1.15.0
 sqlparse==0.4.1
+toml==0.10.2
 vine==5.0.0
 wcwidth==0.2.5
