--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -36,4 +36,4 @@ jobs:
     - name: Run migrations
       run: DJANGO_SETTINGS_MODULE=core.settings.dev python manage.py migrate
     - name: Run tests
-      run: python manage.py test
+      run: DJANGO_SETTINGS_MODULE=core.settings.dev python manage.py test
