--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ click-plugins==1.1.1
 click-repl==0.1.6
 Django==3.1.4
 django-celery-beat==2.2.0
+django-cors-headers==3.7.0
 django-timezone-field==4.1.1
 djangorestframework==3.12.2
 kombu==5.0.2
