--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -1,8 +1,11 @@
 FROM python:3
 ENV PYTHONUNBUFFERED=1
 WORKDIR /code
+
 COPY requirements.txt /code/
-RUN pip install -r requirements.txt
 COPY . /code/
 
+RUN pip install -r requirements.txt \
+    && chmod +x docker/start-celery.sh
+    
 ENTRYPOINT [ "/code/start-prod.sh" ]
