Try different tag

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,4 +27,4 @@ jobs:
           context: .
           file: docker/Dockerfile.prod
           push: true
-          tags: carletoncomputersciencesociety/core:latest
+          tags: ghcr.io/carletoncomputersciencesociety/core:latest
