--- a/requirements.txt
+++ b/requirements.txt
@@ -27,4 +27,9 @@ sqlparse==0.4.1
 toml==0.10.2
 vine==5.0.0
 wcwidth==0.2.5
-drf-yasg
+python-dotenv==0.19.0
+drf-yasg==1.20.0
+Pillow==8.3.1
+django-storages==1.11.1
+boto3==1.18.6
+botocore==1.21.6
