--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -1,8 +1,7 @@
-FROM python:3
+FROM python:3.9
 ENV PYTHONUNBUFFERED=1
 WORKDIR /code
-COPY requirements.txt /code/
-RUN pip install -r requirements.txt
-COPY . /code/
 
-ENTRYPOINT [ "/code/start-prod.sh" ]
+COPY . /code
+
+RUN pip install -r requirements.txt
