--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,16 @@ asgiref==3.3.1
 billiard==3.6.3.0
 black==21.4b2
 celery==5.0.5
-click==7.1.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.1.6
-Django==3.1.4
+click==7.1.2
 django-celery-beat==2.2.0
 django-cors-headers==3.7.0
 django-timezone-field==4.1.1
+Django==3.1.4
 djangorestframework==3.12.2
+gunicorn==20.1.0
 kombu==5.0.2
 mypy-extensions==0.4.3
 pathspec==0.8.1
@@ -22,9 +23,11 @@ python-crontab==2.5.1
 python-dateutil==2.8.1
 pytz==2020.4
 regex==2021.4.4
+sentry-sdk==1.3.1
 six==1.15.0
 sqlparse==0.4.1
 toml==0.10.2
 vine==5.0.0
 wcwidth==0.2.5
+whitenoise==5.3.0
 drf-yasg
