--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,11 @@ click-repl==0.1.6
 click==7.1.2
 django-celery-beat==2.2.0
 django-cors-headers==3.7.0
+django-environ==0.9.0 
 django-timezone-field==4.1.1
 Django==3.1.4
 djangorestframework==3.12.2
+drf-yasg
 gunicorn==20.1.0
 kombu==5.0.2
 mypy-extensions==0.4.3
@@ -30,4 +32,3 @@ toml==0.10.2
 vine==5.0.0
 wcwidth==0.2.5
 whitenoise==5.3.0
-drf-yasg
